--- a/food.html
+++ b/food.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Food Recipes</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="food.css">
     
 </head>
 <body>
